--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a class="active" href="#HOME">HOME</a></li>
                 <li><a href="#SERVICES">SERVICES</a></li>
                 <li><a href="#">TOP DESTINATIONS</a></li>
-                <li><a href="#">TRENDING</a></li>
+                <li><a href="#TRENDING">TRENDING</a></li>
                 <li><a href="#">CONTACT US</a></li>
               </ul>
             </nav>
@@ -158,19 +158,461 @@
             <p>Lorem Ipsum is simply dummy text <br>printing and typeseatting industry.<br>has been the industry's</p>
           </div>
         </div>
+  </section>
+  <!-----------------start-------------->
+
+  <section id="Top-Destination">
+    <div class="s-name">
+      <h2>Top Destination</h2>
+      <span class="Small-line"></span>
+    </div>
+
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-6">
+          <div class="ibox">
+            <img class="img-fluid-con" src="image/ban3.jpg">
+            <h3 class="top-left">Bandarban</h3>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="ibox">
+            <img class="img-fluid-con" src="image/Chittagong Hill-Tracts.jpg">
+            <h3 class="top-left">Chittagong</h3>
+          </div>
+        </div>
+        <div class=" col-md-6">
+          <div class="ibox">
+            <img class="img-fluid-con" src="image/Sylhet.jpg">
+            <h3 class="top-left">Sylhet</h3>
+          </div>
+        </div>
+
+        <div class=" col-md-6">
+          <div class="ibox">
+            <img class="img-fluid-con" src="image/Rangamati.jpg">
+            <h3 class="top-left">Rangamati</h3>
+          </div>
+        </div>
 
 
+        <div class=" col-md-6">
+          <div class="ibox">
+            <img class="img-fluid-con" src="image/Cox's Bazar.jpg">
+            <h3 class="top-left">Cox's Bazar</h3>
+          </div>
+        </div>
+        <div class=" col-md-6">
+          <div class="ibox">
+            <img class="img-fluid-con" src="image/Rajshahi.jpg">
+            <h3 class="top-left">Rajshahi</h3>
+            <div class="ibox">
+            </div>
+
+
+
+          </div>
+        </div>
 
 
       </div>
     </div>
 
   </section>
+  <section id="TRENDING">
+    <div class="s-name">
+      <h2>TRENDING</h2>
+      <span class="Small-line"></span>
+    </div>
+    <div class="container">
+      <div class="treding-tab">
+        <ol>
+          <li><a href="#TOUR" class="link-control" onclick="openCity('TOUR')">TOUR</a></li>
+          <li><a href="#HOTEL" class="link-control" onclick="openCity('HOTEL')">HOTEL</a></li>
+          <li><a href="#ACTIVITY" class="link-control" onclick="openCity('London')">ACTIVITY</a></li>
+          <li><a href="#CAR" class="link-control" onclick="openCity('London')">CAR</a></li>
+          <li><a href="#FLIGHT" class="link-control" onclick="openCity('London')">FLIGHT</a></li>
+          <li><a href="#YATCH" class="link-control" onclick="openCity('London')">YATCH</a></li>
 
+        </ol>
+      </div>
+    </div>
+    <div id="TOUR" class="city">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card-white">
+              <img class="img-fluid" src="image/sundarbans.jpg">
+              <div class="card-white-text">
+                <h4><i class="fa fa-map-marker"> Sundarbans Mangrove Forest </i></h4>
+                <div class="card-white-text-para">
+                  <a href="#">Lorem Ipsum is simply dummy text</a>
+                  <div class="card-white-text-para-icon"><i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star">
+                      <span class="card-white-text-para-icon-review">48 Review</span></i>
+
+
+
+                    <div class="card-white-text-para-icon-c"><i class="fa fa-clock-o">
+                        <span class="card-white-text-para-icon-time"> 3hours 4minutes</i>
+                      </span></div>
+                    </i>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card-white">
+              <img class="img-fluid" src="image/ctg.jpg">
+              <div class="card-white-text">
+                <h4><i class="fa fa-map-marker"> Chittagong Hill-Tracts </i></h4>
+                <div class="card-white-text-para">
+                  <a href="#">Lorem Ipsum is simply dummy text</a>
+                  <div class="card-white-text-para-icon"><i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star">
+                      <span class="card-white-text-para-icon-review">48 Review</span></i>
+
+
+
+                    <div class="card-white-text-para-icon-c"><i class="fa fa-clock-o">
+                        <span class="card-white-text-para-icon-time"> 3hours 4minutes</i>
+                      </span></div>
+                    </i>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 ">
+            <div class="card-white">
+              <img class="img-fluid" src="image/sona.jpg">
+              <div class="card-white-text">
+                <h4><i class="fa fa-map-marker"> Sonargaon & Panam city </i></h4>
+                <div class="card-white-text-para">
+                  <a href="#">Lorem Ipsum is simply dummy text</a>
+                  <div class="card-white-text-para-icon"><i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star">
+                      <span class="card-white-text-para-icon-review">48 Review</span></i>
+
+
+
+                    <div class="card-white-text-para-icon-c"><i class="fa fa-clock-o">
+                        <span class="card-white-text-para-icon-time"> 3hours 4minutes</i>
+                      </span></div>
+                    </i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card-white">
+              <img class="img-fluid" src="image/Srimangal.jpg">
+              <div class="card-white-text">
+                <h4><i class="fa fa-map-marker"> Srimangal </i></h4>
+                <div class="card-white-text-para">
+                  <a href="#">Lorem Ipsum is simply dummy text</a>
+                  <div class="card-white-text-para-icon"><i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star">
+                      <span class="card-white-text-para-icon-review">48 Review</span></i>
+
+
+
+                    <div class="card-white-text-para-icon-c"><i class="fa fa-clock-o">
+                        <span class="card-white-text-para-icon-time"> 3hours 4minutes</i>
+                      </span></div>
+                    </i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card-white">
+              <img class="img-fluid" src="image/St. Martin Island.jpg">
+              <div class="card-white-text">
+                <h4><i class="fa fa-map-marker"> St. Martin Island </i></h4>
+                <div class="card-white-text-para">
+                  <a href="#">Lorem Ipsum is simply dummy text</a>
+                  <div class="card-white-text-para-icon"><i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star">
+                      <span class="card-white-text-para-icon-review">48 Review</span></i>
+
+
+
+                    <div class="card-white-text-para-icon-c"><i class="fa fa-clock-o">
+                        <span class="card-white-text-para-icon-time"> 3hours 4minutes</i>
+                      </span></div>
+                    </i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 ">
+            <div class="card-white">
+              <img class="img-fluid" src="image/Sajek Valley.jpg">
+              <div class="card-white-text">
+                <h4><i class="fa fa-map-marker"> Sajek Valley </i></h4>
+                <div class="card-white-text-para">
+                  <a href="#">Lorem Ipsum is simply dummy text</a>
+                  <div class="card-white-text-para-icon"><i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star">
+                      <span class="card-white-text-para-icon-review">48 Review</span></i>
+
+
+
+                    <div class="card-white-text-para-icon-c"><i class="fa fa-clock-o">
+                        <span class="card-white-text-para-icon-time"> 3hours 4minutes</i>
+                      </span></div>
+                    </i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- --------------------------------Hotel--------------------------------
+
+    <div id="HOTEL" class="city" style="display:none">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card-white">
+              <img class="img-fluid" src="image/ho.jpg">
+              <div class="card-white-text">
+                <h4><i class="fa fa-map-marker"> Grester London,United Kingdom </i></h4>
+                <div class="card-white-text-para">
+                  <a href="#">Lorem Ipsum is simply dummy text</a>
+                  <div class="card-white-text-para-icon"><i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star">
+                      <span class="card-white-text-para-icon-review">48 Review</span></i>
+
+
+
+                    <div class="card-white-text-para-icon-c"><i class="fa fa-clock-o">
+                        <span class="card-white-text-para-icon-time"> 3hours 4minutes</i>
+                      </span></div>
+                    </i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card-white">
+              <img class="img-fluid" src="image/ho2.jpg">
+              <div class="card-white-text">
+                <h4><i class="fa fa-map-marker"> Grester London,United Kingdom </i></h4>
+                <div class="card-white-text-para">
+                  <a href="#">Lorem Ipsum is simply dummy text</a>
+                  <div class="card-white-text-para-icon"><i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star">
+                      <span class="card-white-text-para-icon-review">48 Review</span></i>
+
+
+
+                    <div class="card-white-text-para-icon-c"><i class="fa fa-clock-o">
+                        <span class="card-white-text-para-icon-time"> 3hours 4minutes</i>
+                      </span></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 ">
+            <div class="card-white">
+              <img class="img-fluid" src="image/ho3.jpg">
+              <div class="card-white-text">
+                <h4><i class="fa fa-map-marker"> Grester London,United Kingdom </i></h4>
+                <div class="card-white-text-para">
+                  <a href="#">Lorem Ipsum is simply dummy text</a>
+                  <div class="card-white-text-para-icon"><i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star">
+                      <span class="card-white-text-para-icon-review">48 Review</span></i>
+
+                  </div>
+
+                  <div class="card-white-text-para-icon-c"><i class="fa fa-clock-o">
+                      <span class="card-white-text-para-icon-time"> 3hours 4minutes</i>
+                    </span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+    </div>
+    </div> -->
+
+
+  </section>
+  <section>
+    <div class="main-two"></div>
+  </section>
+
+  <section id="ABOUT">
+    <div class="s-name">
+      <h2>Why Choose us</h2>
+      <span class="Small-line"></span>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="about-box">
+            <img src="image/dollar.jpg">
+            <h2>Competitive Pricing</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="about-box">
+            <img src="image/badge.jpg">
+            <h2>Award-winnig Services</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="about-box">
+            <img src="image/Globe.png">
+            <h2>Worldwide Coverage</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+
+  </section>
+  <div class="Lines"></div>
+
+
+
+  <section>
+    <div class="container edit-sec">
+      <div class="row">
+        <div class="col-md-3">
+          <label class="logo">Tour & Travel</label>
+        </div>
+        <div class="col-md-3 input-edit">
+          <img class="img-fluid" src="image/online-payment.jpg">
+        </div>
+        <div class="col-md-3 input-edit">
+
+          <input type="text" name="text" placeholder="English(United-States)" class="text-edit-two">
+        </div>
+        <div class="col-md-3 input-edit">
+          <input type="text" name="text" placeholder=" $ USSD" class="edit-three">
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
+
+
+  <section>
+    <div class="world"></div>
+  </section>
+
+  <section id="CONTACT-US">
+    <div class="s-name">
+      <h2>CONTACT US</h2>
+      <span class="Small-line"></span>
+    </div>
+    <div class="Contact-control">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-sm-3 first">
+            <h2>NEED T&T HELP?</h2>
+            <p><i class="fa fa-phone"></i> Got Question call? us 24/7!</p>
+            <p>Call us <a href="">(000)0000 0000</a></p>
+            <h2>Contact Info</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="foot-icon-cont">
+              <i class="fa fa-facebook" style="    padding: 10px 14px"></i>
+              <i class="fa fa-twitter"></i>
+              <i class="fa fa-instagram"></i>
+              <i class="fa fa-whatsapp"></i>
+            </div>
+          </div>
+
+          <div class="col-sm-3">
+            <h2>Company</h2>
+            <ol>
+              <li>About us</li>
+              <li>Term of Use</li>
+              <li>Privacy Statement</li>
+              <li> Feedbacks</li>
+            </ol>
+          </div>
+
+          <div class="col-sm-3">
+            <h2>Mailing List</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <input type="text" name="name" class="in-te">
+            <input type="submit" class="in-su">
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
 
   <script type="text/javascript" src="js/script.js"></script>
 
 </body>
 
-</html>
+</html> --> -->
